--- a/signup-app/src/components/RightComponent/RightComponent.module.css
+++ b/signup-app/src/components/RightComponent/RightComponent.module.css
@@ -7,7 +7,9 @@
     
 }
 .rightcontainer h3{
-    padding-top: 65px;
-    padding-left: 70px;
+    padding-top: 4em;
+    padding-left: 100px;
+    font-weight: 500;
+    font-size: 30px;
 
 }
